# Papppresse

./: .gitignore  CMakeLists.txt  README.md  TODO.md
code/: .gitignore  AnalogCurrentSensor.cpp  Bts7960ActuatorDrive.cpp  CMakeLists.txt  CommandQueue.cpp  ControlTask.cpp  DebouncedDigitalInput.cpp  FillLevelEstimator.cpp  IDigitalInput.h  InputDiagnostics.cpp  InputSampler.cpp  LcdDisplayI2C.cpp  MqttClient.cpp  MqttTask.cpp  PressController.cpp  PressFsm.cpp  README.md  RawDigitalInput.cpp  STATE_MACHINE_CLASS_CHANGES.md  StateQueue.cpp  app_main.cpp
code/include/: AnalogCurrentSensor.h  AppConfig.h  Bts7960ActuatorDrive.h  CommandQueue.h  ControlTask.h  DebouncedDigitalInput.h  FillLevelEstimator.h  IActuatorDrive.h  IConnectivity.h  IDigitalInput.h  IDisplay.h  IOverCurrentDetection.h  InputDiagnostics.h  InputSampler.h  LcdDisplayI2C.h  MqttClient.h  MqttTask.h  PapppresseTypes.h  PressController.h  PressFsm.h  RawDigitalInput.h  StateQueue.h
code/includes/: Bts7960ActuatorDrive.h  DebouncedDigitalInput.h  IActuatorDrive.h  RawDigitalInput.h
code/main/: Bts7960ActuatorDrive.cpp  DebouncedDigitalInput.cpp  main.ino
code/main/includes/: Bts7960ActuatorDrive.h  DebouncedDigitalInput.h  IActuatorDrive.h  IDigitalInput.h
diagrams/: Papppresse class diagramm.drawio  README.md  class diagramm Papppresse.drawio  electrical schematic Papppresse.drawio  sequence diagram control_cycle Papppresse.drawio  sequence diagram door_opened Papppresse.drawio  sequence diagram endstop reached Papppresse.drawio  sequence diagram endstop_reached Papppresse.drawio  (+5 more)
(+6 files in other folders)
